# velopera-nrf-firmware

./: .gitignore  CMakeLists.txt  Kconfig  README.md  compile.sh  mini_iot_dongle_v2.overlay  nrf9160dk_nrf9160_ns.overlay  prj.conf
boards/: nrf9160dk_nrf9160_ns.conf  nrf9160dk_nrf9160_ns.overlay
boards/arm/mini_iot_dongle_v2/: Kconfig.board  Kconfig.defconfig  board.cmake  mini_iot_dongle_v2-pinctrl.dtsi  mini_iot_dongle_v2.dts  mini_iot_dongle_v2.yaml  mini_iot_dongle_v2_defconfig
cmake/: velopera_nrf_firmware_config.h.in
src/common/: CMakeLists.txt  firmware_version.c  firmware_version.h  message_channel.c  message_channel.h
src/modules/fota/: CMakeLists.txt  Kconfig.fota  fota.c  fota.h  fota_app.c
src/modules/location/: location.c
src/modules/network/: network.c
src/modules/transport/: CMakeLists.txt  Kconfig.transport  transport.c
src/modules/transport/credentials/: psk.h
src/modules/transport/credentials_provision/: credentials_provision.c
src/modules/transport/mqtt_helper/: CMakeLists.txt  Kconfig.mqtt  dynsec_mqtt_helper.c  dynsec_mqtt_helper.h
src/modules/trigger/: CMakeLists.txt  trigger.c
